(library
 (name channel)
 (modules channel)
 (libraries qcheck domainslib)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name length)
  (modules length)
  (libraries channel qcheck multicorecheck.stm)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name distribution)
  (modules distribution)
  (libraries channel qcheck multicorecheck.stm)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name ratio)
  (modules ratio)
  (libraries channel qcheck multicorecheck.stm)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name thousand)
  (modules thousand)
  (libraries channel qcheck multicorecheck.stm)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))
